--- a/Crud/CSS/main.css
+++ b/Crud/CSS/main.css
@@ -30,7 +30,7 @@ main{
     width: 90%;
     margin: 5vh auto;
     padding: 50px;
-    box-shadow: 2px 2px 10px var(--shadow-color);
+    box-shadow: 2px 2px 2px 10px var(--shadow-color);
     gap: 20px;
 }
 
@@ -69,19 +69,12 @@ box-shadow: 0 1px 2px var(--shadow-color);
  .header-title{
     font-size: 1.5rem;
  }
- /* 
-main{
-    padding: 0;
-    margin: 2px 0 0 0;
-    width: 100%;
-    box-shadow: none;
-}  */
-
-}
-
-main{
+ main{
     padding: 0;
     margin: 2px 0 0 0;
     width: 100%;
     box-shadow: none;
 } 
+
+}
+
